# Programming-C

./: README.md
lab12_libraries/: FuncLab12.c  FuncLab12.h  README.md  main.c
lab13_CMake_Make/: README.md
lab13_CMake_Make/ball-5/cmake_task/: CMakeLists.txt
lab13_CMake_Make/ball-5/cmake_task/background/: CMakeLists.txt
lab13_CMake_Make/ball-5/cmake_task/pipes/: CMakeLists.txt
lab13_CMake_Make/ball-star/: README.md
lab13_CMake_Make/ball-star/CMake/: Menu.cpp
lab13_CMake_Make/balls-3-and-4/: CMakeLists.txt  Makefile
lab13_CMake_Make/balls-3-and-4/include/: FuncLab12.h
lab13_CMake_Make/balls-3-and-4/src/: FuncLab12.c  main.c
lab14_linked_list/: main  main.c
laba_9/: README.md  screen.md  sort.c
